# CNNpp

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: engine.hpp.55B1E6E5EFED50F7.idx  main.cpp.4EF243EDBCBED397.idx  utils.hpp.D48CF500DA21B29D.idx
include/CNNpp/: constants.hpp  engine.hpp  utils.hpp
lib/: engine.cpp  engine.hpp
src/: main.cpp
